# GooglifyCMake

./: .profile  .travis.yml  CMakeLists.txt  Googlify.cmake  LICENSE  README.md  ThirdPartyLibraries.cmake  _googlify_8cmake.html  _googlify_8cmake_source.html  _r_e_a_d_m_e_8md_source.html  _third_party_libraries_8cmake_source.html  deprecated.html  files.html  globals.html  globals_func.html  index.html  pages.html  todo.html
doc/: CMakeLists.txt  Doxyfile.in
search/: all_0.js  all_3.js  all_5.js  all_7.js  all_8.js  all_a.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  functions_9.js  search.js
src/: CMakeLists.txt
src/a_package/: CMakeLists.txt  Main.java  MyLib.java  main.cc  my_lib.cc  my_lib.h
src/base/: CMakeLists.txt  base.h  signal_handler.cc  signal_handler.h
src/buildifier/ast/: CMakeLists.txt  ast.cc  ast.h  command.cc  target.h
src/buildifier/parser/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/a_package/: CMakeLists.txt  Main.java  MyLib.java  hello_world.py  main.cc  main.mm  my_lib.cc  my_lib.h  my_lib.py  my_lib_test.cc
src/examples/ios_app/: AppDelegate.m  CMakeLists.txt  Info.plist  main.m  main.mm
src/examples/other_package/: CMakeLists.txt  MyLib.java  my_lib.cc  my_lib.h
src/other_package/: CMakeLists.txt  my_lib.cc  my_lib.h
src/tools/: CMakeLists.txt
src/tools/buildifier/: CMakeLists.txt  app.cc  app.h  app_test.cc  main.cc
src/tools/buildifier/ast/: CMakeLists.txt  ast.cc  ast.h  command.cc  command.h  target.cc  target.h
src/tools/buildifier/parser/: CMakeLists.txt  lexer.l  parser.y  parser_test.cc  processor.h  scanner.cc  scanner.h
src/tools/buildifier/testdata/: CMakeLists1.txt  CMakeLists2.txt
src/util/: CMakeLists.txt  Socket.java  abi.h  abi_test.cc  algorithm.h  csv.cc  csv.h  date_time.cc  date_time.h  date_time_test.cc  iterators.h  logging.cc  logging.h  logging_test.cc  ptr_set.h  socket.cc  socket.h  streams.cc  streams.h  strings.cc  strings.h  strings_test.cc  system.cc  system.h  system_test.cc
src/util/dev/: CMakeLists.txt  config.cc  config.h
support/: create_fat_libs.sh  generate_classpath_for_maven_libs.py  iOS.cmake  set_install_names.sh
travis/: install-cmake-3.1.1.sh
